buildscript {
    ext {
        springBootVersion = '2.1.0.BUILD-SNAPSHOT'
    }
    repositories {
        mavenCentral()
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/milestone" }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("org.junit.platform:junit-platform-gradle-plugin:1.2.0")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'jacoco'

group = 'com.piotrek'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 11

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://repo.spring.io/milestone" }
}

dependencies {
    // web
    compile('org.springframework.boot:spring-boot-starter-webflux')
    compile('org.springframework.boot:spring-boot-starter-web')

    // security
    compile('org.springframework.boot:spring-boot-starter-security')
    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.0.BUILD-SNAPSHOT')
    compile('org.springframework.security:spring-security-oauth2-client')
    compile('com.auth0:java-jwt:3.4.0')

    // other
    compile('org.springframework.boot:spring-boot-starter-aop')
    runtime('org.springframework.boot:spring-boot-devtools')
    compileOnly('org.projectlombok:lombok:1.18.2')
    annotationProcessor('org.projectlombok:lombok:1.18.2')
    
    // data
    compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')

    // java 10 missing dependencies needed for oauth2
    compile('javax.xml.bind:jaxb-api:2.3.1')
    compile('com.sun.xml.bind:jaxb-core:2.3.0.1')
    compile('com.sun.xml.bind:jaxb-impl:2.3.1')
    compile('javax.activation:javax.activation-api:1.2.0')

    // tests
    testCompile("org.junit.jupiter:junit-jupiter-api")
    testRuntime("org.junit.jupiter:junit-jupiter-engine")
    testRuntime("org.junit.platform:junit-platform-launcher:1.3.1")
    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile('io.projectreactor:reactor-test')
    testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
}

//export test coverage
jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}

jacoco {
    toolVersion = "0.8.2"
}

test {
    useJUnitPlatform()
}